# AutoRepoReview

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GRAFANA_CLOUD_QUICKSTART.md  GRAFANA_CLOUD_SETUP.md  GRAFANA_CLOUD_SIMPLE.md  README.md  TELEMETRY.md  TEMPO_SEARCH_GUIDE.md  autoreporeview  generate-otel-config.sh  mkdocs.yml  otel-collector-config.yaml  otel-collector-config.yaml.template  pyproject.toml  test_telemetry.py
.github/workflows/: build-binaries.yml  ci-cd.yml  ci.yml  publish-pypi.yml
app/: __main__.py  config.py  main.py
app/agents/: agent.py
app/models/: llm_factory.py
app/services/: git_service.py  summarize_service.py
docs/: ai-usage.md
docs/architecture/: analytics.md  architecture.md  observability.md  tech-stack.md
docs/automation/: testing.md
docs/requirements/: quality-requirements.md
docs/sprints/sprint-0/: report.md
docs/sprints/sprint-1/: meeting-1.md
docs/sprints/sprint-2/: retrospective.md
docs/sprints/sprint-6/: meeting.md  retrospective.md  script.md
prototype/: main.py  pyproject.toml
tests/: conftest.py  test_main.py  test_summarize_service.py
tests/agents/: test_agent.py
tests/qas_tests/: test_qas001.py  test_qas003.py  test_qas004.py
tests/services/: test_git_service.py
tests/unit/: conftest.py
tests/unit/cli/: test_main.py
tests/unit/models/: test_llm_factory.py
tests/unit/services/: test_git_service.py  test_summarize_service.py
